# AI-STEM-Tutor

./: CMakeLists.txt  LICENSE  Makefile  README.md  requirements.txt  run.sh  tutor_app
.github/workflows/: main.yml
github/workflows/: cpp_build.yaml
python_ai/: api.py  server.py
src/: ai_connector.cpp  ai_connector.h  main.cpp  tutor.cpp  tutor.h
